# Regret

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: Building.hpp  Entity.hpp  Math.hpp  Player.hpp  RenderWindow.hpp
res/dev/: idk.ase
src/: building.cpp  entity.cpp  main.cpp  player.cpp  renderwindow.cpp
